force-app/main/default/objects/dsfs__DocuSign_Status__c/fields/dsfs__Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>dsfs__Completed_Date_Time__c</fullName>
    <label>Completed</label>
    <type>DateTime</type>
</CustomField>