force-app/main/default/objects/dsfs__DocuSign_Status__c/listViews/dsfs__All1.listView-meta.xml
<ListView>
    <fullName>dsfs__All1</fullName>
    <columns>NAME</columns>
    <columns>dsfs__DocuSign_Envelope_ID__c</columns>
    <columns>dsfs__Subject__c</columns>
    <columns>dsfs__Sent_Date_Time__c</columns>
    <columns>dsfs__Envelope_Status__c</columns>
    <columns>dsfs__Company__c</columns>
    <columns>Application__c</columns>
    <columns>Lead_Id__c</columns>
    <columns>dsfs__Viewed_Date_Time__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>APP-0002251168</value>
    </filters>
    <label>All</label>
</ListView>